Refactor to update to ArduinoJSON 6

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,8 @@ framework = arduino
 monitor_speed = 115200
 lib_deps =
     WebSockets
+
+[env:nodemcu]
+platform = espressif8266
+board = nodemcu
+framework = arduino
