--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,10 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 #upload_port = 192.168.53.55
-monitor_speed = 115200
+monitor_speed = 57600
 lib_deps =
     WebSockets
+    ArduinoJson
+;extra_scripts = pre:extra_script.py
 
-[env:nodemcu]
-platform = espressif8266
-board = nodemcu
-framework = arduino
+
