--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,9 @@ platform = espressif8266
 #board = esp01_1m
 board = esp12e
 framework = arduino
-#upload_port = 192.168.53.55
-monitor_speed = 57600
+upload_port = 10.0.0.1
+upload_protocol = espota
+#monitor_speed = 57600
 lib_deps =
     WebSockets
     ArduinoJson
